# lingmo-ocean

./: AUTHORS  CMakeLists.txt  PKGBUILD
colors/: CMakeLists.txt  Ocean.colors  OceanDark.colors  OceanLight.colors
cursors/Ocean/Ocean/: index.theme
cursors/Ocean_Light/Ocean_Light/: index.theme
kdecoration/: CMakeLists.txt  config-ocean.h.cmake  ocean.h  ocean.json  oceanbutton.cpp  oceanbutton.h  oceandecoration.cpp  oceandecoration.h  oceanexceptionlist.cpp  oceanexceptionlist.h  oceansettings.kcfgc  oceansettingsdata.kcfg  oceansettingsprovider.cpp  oceansettingsprovider.h  oceansizegrip.cpp  oceansizegrip.h
kdecoration/config/: CMakeLists.txt  kcm_oceandecoration.cpp  kcm_oceandecoration.json  oceanconfigwidget.cpp  oceanconfigwidget.h  oceandecorationconfig.desktop  oceandetectwidget.cpp  oceandetectwidget.h  oceanexceptiondialog.cpp  oceanexceptiondialog.h  oceanexceptionlistwidget.cpp  oceanexceptionlistwidget.h  oceanexceptionmodel.cpp  oceanexceptionmodel.h  oceanitemmodel.cpp  oceanitemmodel.h  oceanlistmodel.h
kdecoration/config/ui/: oceanconfigurationui.ui  oceanconfigurationui_ui.py  oceandetectwidget.ui  oceandetectwidget_ui.py  oceanexceptiondialog.ui  oceanexceptiondialog_ui.py  oceanexceptionlistwidget_ui.py
kstyle/: CMakeLists.txt  ocean.themerc  oceanblurhelper.cpp  oceanframeshadow.cpp  oceanhelper.cpp  oceanhelper.h  oceanmdiwindowshadow.cpp  oceanmnemonics.cpp  oceanshadowhelper.cpp  oceanstyle.cpp  oceanstyle.h  oceanwindowmanager.cpp
kstyle/animations/: oceananimations.cpp  oceandatamap.h  oceandialdata.cpp  oceanscrollbardata.cpp  oceantransitionwidget.cpp  oceanwidgetstateengine.cpp
kstyle/config/: CMakeLists.txt  main.cpp  oceanstyleconfig.h  oceanstyleconfig.json  oceanstyleconfigmodule.cpp  oceanstyleconfigmodule.h
kstyle/config/ui/: oceanstyleconfig_ui.py
kstyle/debug/: oceanwidgetexplorer.cpp
liboceancommon/: CMakeLists.txt  oceanboxshadowrenderer.cpp
misc/: CMakeLists.txt
misc/gtk/: CMakeLists.txt
misc/gtk/Ocean-GTK/: README.md  index.theme
misc/lingmotheme/: CMakeLists.txt
misc/lingmotheme/Ocean/: colors  metadata.json
misc/lingmotheme/Ocean/bak/2021-05-13/: metadata.desktop
misc/lingmotheme/Ocean/bak/2021-11-20/: metadata.desktop
misc/lingmotheme/Ocean/bak/2021-12-29/: metadata.desktop
misc/look-and-feel/: CMakeLists.txt
misc/look-and-feel/org.kde.ocean/: metadata.json
misc/look-and-feel/org.kde.ocean/contents/: defaults
misc/oceantheme/: CMakeLists.txt
misc/oceantheme/Ocean/: metadata.json
misc/tabbox/: CMakeLists.txt
misc/tabbox/ocean/: metadata.json
misc/tabbox/ocean/contents/ui/: main.qml
wallpapers/: generate_wallpaper_sizes.py
wallpapers/Next/: metadata.json
